static/stylesheet.css
html {
  background: url(images/back.png) repeat;
  height: 100%;
}

body {
  font-family: 'Palanquin', sans-serif;
  color: #222222;
  margin-left: 0px;
  margin-right: 0px;
  font-weight: 300;
  height: 100%;
}

input[type=text] {
    width: 200px;
    padding: 8px 12px 8px 12px;
    border: 1px solid #222222;
    font-weight: 300;
    font-size: 14px;
    display: inline;
    margin-top: 0.5em;
}

input[type=text]:placeholder-shown {
  color: #C5C3C6;
  font-style: italic;
}

input[name=url] {
  width: 500px;
  padding: 8px 12px 8px 12px;
  border: 1px solid #222222;
  font-weight: 300;
  font-size: 14px;
  display: inline;
  margin-top: 0.5em;
}

input[type=url]:placeholder-shown {
  color: #C5C3C6;
  font-style: italic;
}

textarea {
  width: 500px;
  padding: 8px 12px 8px 12px;
  border: 1px solid #222222;
  font-size: 14px;
  display: inline;
  margin-top: 0.5em;
  font-weight: 300;
  height: 90px;
}

textarea:placeholder-shown {
  color: #C5C3C6;
  font-style: italic;
  font-weight: 300;
  font-size: 14px;
}

.content {
  min-height: 100%;
  margin-top: 60px;
  /*margin-bottom: auto;*/
  /*margin-bottom: auto;*/
  margin-bottom: -60px;
}

.content_group {
  /*min-height: 1000px;*/
  margin: 90px auto;
  /*background: green;*/
  max-width: 900px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

.submit {
  background: #00FFB1;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
  font-size: 14px;
  padding: 9px 24px 9px 24px;
  transition-duration: 0.1s;
  margin-top: 0.5em;
}

.submit:hover {
  background: #7FFFD8;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
  cursor: pointer;
}

.submit:active {
  background: #7FFFD8;
  border: 1px solid #000000;
  box-shadow: 0px 0px 0px 0px #222222;
  cursor: pointer;
}

.submit:focus {
  outline:0;
}

.submit-home {
  background: white;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
  font-size: 14px;
  padding: 9px 24px 9px 24px;
  transition-duration: 0.1s;
  margin-top: 0.5em;
  /*display: inline-block;*/
  margin-right: 18px;
  float: left;

}

.submit-home:hover {
  /*background: black;
  color: white;*/
  text-decoration: underline;
  cursor: pointer;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
}

.submit-home:active {
  /*background: black;
  color: white;*/
  text-decoration: underline;
  border: 1px solid #000000;
  cursor: pointer;
  box-shadow: 0px 0px 0px 0px #222222;
}

.submit-home:focus {
  outline:0;
}

.submit-post {
  background: #00FFB1;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
  font-size: 14px;
  padding: 9px 24px 9px 24px;
  transition-duration: 0.1s;
  margin-top: 0.5em;
  float: right;
  margin-bottom: 18px;
}

.submit-post:hover {
  background: #7FFFD8;
  border: 1px solid #000000;
  box-shadow: 4px 4px 0px 0px #222222;
  cursor: pointer;
}

.submit-post:active {
  background: #7FFFD8;
  border: 1px solid #000000;
  box-shadow: 0px 0px 0px 0px #222222;
  cursor: pointer;
}

.submit-post:focus {
  outline:0;
}

.submit-feedback {
  background: white;
  color: #54A3FF;
  border: 1px solid #54A3FF;
  box-shadow: 4px 4px 0px 0px #54A3FF;
  font-size: 14px;
  padding: 9px 24px 9px 24px;
  transition-duration: 0.1s;
  right: 0;
  position: absolute;
  margin-top: 1em;
  margin-bottom: 18px;
  margin-right: 2em;
}

.submit-feedback:hover {
  background: #54A3FF;
  color: white;
  border: 1px solid #54A3FF;
  box-shadow: 4px 4px 0px 0px #54A3FF;
  cursor: pointer;
}

.submit-feedback:active {
  background: #54A3FF;
  border: 1px solid #54A3FF;
  box-shadow: 0px 0px 0px 0px #54A3FF;
  cursor: pointer;
}

.submit-feedback:focus {
  outline:0;
}

#main_block {
  background-color: white;
  margin-left: auto;
  margin-right: auto;
  max-width: 60%;
  padding: 10%;
  /*margin-top: 5%;*/
  margin-bottom: 36px; /* super importnat for the footer position!! */
}

#center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#form {
  /*display: block;*/
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  align-items: center;
  margin-top: 36px;
}



#form_header {
  /*width: 500px;*/
  /*float: right;*/
  /*background: red;*/
}

#header_content {
  /*margin-left: auto;
  margin-right: auto;*/
  height: 80px;
  width: 80%;
  margin: 0px auto;
  /*background: yellow;*/
  /*padding-left: 50%;
  padding-right: 50%;*/
  /*padding-top: 22px;*/
  /*padding-bottom: 22px;*/
  display:flex;
  justify-content:center;
  align-items:center;
}

#title {
  font-size: 36px;
  font-weight: 500;
  line-height: 1;
}


#since {
  font-size: 12px;
  color: #989898;
  margin-bottom: 18px;
}


#group_title {
  /*background: yellow;*/
  max-width: 500px;
  /*padding-left: 27%;*/
  padding-top: 18px;
  padding-bottom: 18px;
  /*display:flex;
  justify-content:center;
  align-items:center;*/
  /*border-style: solid;*/
  border-bottom: solid 2px #222222;
  display: block;
  margin-top: 98px;
  margin-left: auto;
  margin-right: auto;
  /*background: red;*/
}

#form_group {
  /*background: orange;*/
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  align-items: left;
  margin-top: 36px;
  /*margin-bottom: 18px;*/
  display: block;
  max-width: 526px;
  /*padding-left: 8px;*/
  /*padding-right: 8px;*/
}

#link_title {
  font-size: 18px;
  font-weight: 500;
}

#about_link {
  color:white;
}

.header_container {
  width: 100%;
  position: fixed;
  top: 0px;
  background: white;
  background: url(images/back.png) repeat;

}

.title1{
  font-size: 18px;
  text-align: center;
  line-height: 22px;
  margin-top: 36px;
  /*margin-bottom: 8px;*/
  max-width: 420px;
  font-weight: 500;
}

.title2{
  font-size: 16px;
  text-align: center;
  line-height: 22px;
  margin-bottom: 8px;
  max-width: 440px;
  font-weight: 500;
}

.subtitle{
  font-size: 14px;
  text-align: center;
  line-height: 18px;
  max-width: 400px;
  margin-top: 0.5em;
}

.footer {
  font-size: 12px;
  color: #DDDDDD;
  line-height: 60px;
  height: 60px;
  width: 100%;
  background-color: #222222;
  position: relative;
  display: block;
  bottom:0;
  overflow: hidden;
  z-index: 1;
}

#post {
  max-width: 900px;
  min-width: 200px;
  border-bottom: solid 1px #EAEAEA;
  /*background-color: red;*/
  padding-top: 24px;


}

#footer_left {
  float: left;
  padding-left: 3%;
}

#footer_right {
  float: right;
  padding-right: 3%;
}

